# Japanese-Voice-Agent-Framework

./: .gitignore  README.md  pyproject.toml
examples/: autoresearch_demo.py  dental_clinic.md  hello_world.py
src/jvaf/: __init__.py  agent.py  cli.py  config.py
src/jvaf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jvaf/autoresearch/: __init__.py  audio_gen.py  config.py  evaluator.py  judge.py  log.py  loop.py  proposer.py  simulator.py
src/jvaf/conversation/: __init__.py  backchannel.py  barge_in.py  turn_taking.py
src/jvaf/core/: __init__.py  events.py  frames.py  pipeline.py  processor.py
src/jvaf/lang/: __init__.py  base.py  ja.py
src/jvaf/providers/: __init__.py  llm.py  llm_anthropic.py  llm_google.py  llm_groq.py  llm_hf_local.py  llm_mistral.py  llm_openai.py  registry.py  stt.py  stt_deepgram.py  stt_google.py  stt_hf_whisper.py  stt_openai.py  transport.py  tts.py  tts_elevenlabs.py  tts_google.py  tts_openai.py  tts_voicevox.py  vad.py  vad_silero.py
tests/: conftest.py  test_audio_gen.py  test_autoresearch.py  test_backchannel.py  test_focus.py  test_frames.py  test_judge.py  test_pipeline.py  test_registry.py  test_simulator.py  test_turn_taking.py
